--- a/src/main/resources/css/dialog-box.css
+++ b/src/main/resources/css/dialog-box.css
@@ -1,15 +1,17 @@
 .label {
-    background: #d9ffe2;
+    background: white;
     -fx-background-color: background;
     -fx-border-color: #d55e00 #009e73 #cc79a7 #0072b2;
     -fx-border-width: 2px;
-    -fx-background-radius: 1em 1em 0 1em;
-    -fx-border-radius: 1em 1em 0 1em;
     -fx-text-fill: ladder(background, white 49%, black 50%);
 }
 
+.user-label {
+    -fx-background-radius: 1em 1em 0 1em;
+    -fx-border-radius: 1em 1em 0 1em;
+}
+
 .reply-label {
-    background: white;
     -fx-background-radius: 1em 1em 1em 0;
     -fx-border-radius: 1em 1em 1em 0;
 }
@@ -24,6 +26,7 @@
 
     /* Rotate image clockwise by degrees. */
     -fx-rotate: 0;
+    -fx-border-radius: 1em;
 }
 
 .add-label {
