--- a/src/main/resources/css/main.css
+++ b/src/main/resources/css/main.css
@@ -1,27 +1,28 @@
 .root {
-    main-color: rgb(237, 255, 242);       /* Create a looked-up color called "main-color" within root. */
-    -fx-background-color: main-color;
+    main-bg-color: #101010;
+    -fx-background-color: main-bg-color;
     -fx-font-family: "Segoe UI Emoji"; /* Windows */
 }
 
 .text-field {
-    -fx-background-color: #d9ffe2;
-    -fx-font: 20px;
-}
-
-.button {
-    -fx-background-color: mediumspringgreen;
-    -fx-font: italic bold 16px;
-}
-
-.button:hover {
-    -fx-background-color:cyan;
+    -fx-background-color: #303030;;
+    -fx-text-fill: white;
     -fx-font-size: 18px;
 }
 
-.button:pressed {
+#sendButton {
+    -fx-background-color: #00cc00;
+    -fx-cursor: hand;
+    -fx-background-radius: 20px; /* Match half of the button's width/height */
+    -fx-border-radius: 20px; /* Match half of the button's width/height */
+}
+
+#sendButton :hover {
+    -fx-background-color: #00ff00;
+}
+
+#sendButton:pressed {
     -fx-background-color:orange;
-    -fx-font-size: 20px;
 }
 
 .scroll-pane,
@@ -31,7 +32,7 @@
 
 .scroll-bar {
     -fx-font-size: 10px;  /* Change width of scroll bar. */
-    -fx-background-color: main-color;
+    -fx-background-color: main-bg-color;
 }
 
 .scroll-bar .thumb {
@@ -45,4 +46,3 @@
     -fx-pref-height: 0;
     -fx-opacity: 0;
 }
-
