--- a/src/main/resources/css/dialog-box.css
+++ b/src/main/resources/css/dialog-box.css
@@ -4,6 +4,7 @@
     -fx-border-color: #d55e00 #009e73 #cc79a7 #0072b2;
     -fx-border-width: 2px;
     -fx-text-fill: ladder(background, white 49%, black 50%);
+    -fx-font-size: 16px;
 }
 
 .user-label {
@@ -26,7 +27,6 @@
 
     /* Rotate image clockwise by degrees. */
     -fx-rotate: 0;
-    -fx-border-radius: 1em;
 }
 
 .add-label {
