--- a/src/main/resources/css/dialog-box.css
+++ b/src/main/resources/css/dialog-box.css
@@ -1,20 +1,22 @@
 .label {
-    background: white;
-    -fx-background-color: background;
-    -fx-border-color: #d55e00 #009e73 #cc79a7 #0072b2;
+    background: #006600;
     -fx-border-width: 2px;
     -fx-text-fill: ladder(background, white 49%, black 50%);
     -fx-font-size: 16px;
 }
 
 .user-label {
+    -fx-background-color: background;
     -fx-background-radius: 1em 1em 0 1em;
     -fx-border-radius: 1em 1em 0 1em;
+    -fx-border-color: #ffffff;
 }
 
 .reply-label {
-    -fx-background-radius: 1em 1em 1em 0;
-    -fx-border-radius: 1em 1em 1em 0;
+    -fx-background-color: #002244;
+    -fx-background-radius: 0 1em 1em 1em;
+    -fx-border-radius: 0 1em 1em 1em;
+    -fx-border-color: #55bbff;
 }
 
 #displayPicture {
@@ -30,13 +32,21 @@
 }
 
 .add-label {
-    -fx-background-color: yellow;
+    -fx-border-color: #00cc00;
 }
 
 .marked-label {
-    -fx-background-color: palegreen;
+    -fx-border-color: #ffcc00;
 }
 
 .delete-label {
-    -fx-background-color: lightpink;
+    -fx-border-color:  #ffaaaa;
+}
+
+.undo-label {
+    -fx-border-color:  #999999;
+}
+
+.error-label {
+    -fx-border-color:  #ff0000;
 }
